# aa-lule

./: README.md
bottenskrap/: .env  Cargo.toml  README.md  run.sh
bottenskrap/migrations/2022-11-10-092855_save_products/: up.sql
bottenskrap/src/: main.rs  models.rs  schema.rs
missbruk/: README.md  alkoholist.js  build.sh  manifest.json  manifest_v2.json  manifest_v3.json  missbruk.json  produkt.js  sortiment.js
missbruk/code/: sortiment.js
missbruk/scripts/: produkt.js  sortiment.js
