[package]
name = "bottenskrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
surf = "2.3.2"
http-types = "2.12.0"
serde_json = "1.0.87"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"